@@ -115,7 +115,7 @@ logfile ../logs/logfile
 #                    as well as any errors that occur on ONLY those commands.
 # If no log command is given, logging will be turned of (same as 'log none')
 #
-log all
+log all !readonly
 
 # The 'thruput' command is used to specify the maximum average
 # number of bytes per second that the server will transmit. Use 
